add social logos

--- a/src/sample.html
+++ b/src/sample.html
@@ -160,6 +160,14 @@ $$ x = {-b \pm \sqrt{b^2-4ac} \over 2a} $$</p>
               alt="Instagram" /></a>
         </li>
         <li>
+          <a href="https://www.threads.net/@michinobumaeda"><img src="../docs/img/threads.png" title="Threads"
+              alt="Threads" /></a>
+        </li>
+        <li>
+          <a href="https://bsky.app/profile/micmaeda.bsky.social"><img src="../docs/img/bluesky.png" title="BlueSky"
+              alt="BlueSky" /></a>
+        </li>
+        <li>
           <a href="https://www.tumblr.com/michinobumaeda"><img src="../docs/img/tumblr.png" title="Tumblr"
               alt="Tumblr" /></a>
         </li>
@@ -184,7 +192,7 @@ $$ x = {-b \pm \sqrt{b^2-4ac} \over 2a} $$</p>
             International
             License</a>.
         </div>
-        <div class="copyright">&copy; 2004-2023 Michinobu Maeda.</div>
+        <div class="copyright">&copy; 2004-2024 Michinobu Maeda.</div>
         <div>
           This site is hosted on GitHub Pages:
           <a href="https://github.com/MichinobuMaeda/MichinobuMaeda.github.io">Source</a>
