--- a/src/template_layout.html
+++ b/src/template_layout.html
@@ -78,6 +78,14 @@
               alt="Instagram" /></a>
         </li>
         <li>
+          <a href="https://www.threads.net/@michinobumaeda"><img src="{{ root }}img/threads.png" title="Threads"
+              alt="Threads" /></a>
+        </li>
+        <li>
+          <a href="https://bsky.app/profile/micmaeda.bsky.social"><img src="{{ root }}img/bluesky.png" title="BlueSky"
+              alt="BlueSky" /></a>
+        </li>
+        <li>
           <a href="https://www.tumblr.com/michinobumaeda"><img src="{{ root }}img/tumblr.png" title="Tumblr"
               alt="Tumblr" /></a>
         </li>
