--- a/src/template_layout.html
+++ b/src/template_layout.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Twitter summary card -->
+  <meta name="og:title" content="みちのぶのねぐら" />
+  <meta name="og:description" content="工作室 厚生部 政治局" />
+  <meta name="og:image" content="https://pages.michinobu.jp/img/dragon2013.jpg" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@mixnb" />
   <meta name="twitter:title" content="みちのぶのねぐら - 工作室 厚生部 政治局" />
