fix: update dependencies and improve metadata in HTML templates

--- a/src/sample.html
+++ b/src/sample.html
@@ -6,13 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Twitter summary card -->
-  <meta name="og:title" content="みちのぶのねぐら" />
-  <meta name="og:description" content="工作室 厚生部 政治局" />
-  <meta name="og:image" content="https://pages.michinobu.jp/img/dragon2013.jpg" />
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@mixnb" />
-  <meta name="twitter:title" content="みちのぶのねぐら - 工作室 厚生部 政治局" />
-  <meta name="twitter:image" content="https://pages.michinobu.jp/img/logo.png" />
+  <meta property="og:title" content="ページの見出し - みちのぶのねぐら" />
+  <meta property="og:site_name" content="みちのぶのねぐら" />
+  <meta property="og:description" content="あいうえおかきくけこアイウエオカキクケコ０１２３４５６７８９0123456789〇一二三四五六七八九" />
+  <meta property="og:image" content="https://pages.michinobu.jp/img/dragon2013.jpg" />
+  <meta name="twitter:title" content="ページの見出し - みちのぶのねぐら" />
+  <meta name="twitter:description" content="あいうえおかきくけこアイウエオカキクケコ０１２３４５６７８９0123456789〇一二三四五六七八九" />
+  <meta name="twitter:creator" content="@mixnb" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="https://pages.michinobu.jp/img/dragon2013.png" />
 
   <link href="../docs/main.css" rel="stylesheet">
 
