--- a/src/template_layout.html
+++ b/src/template_layout.html
@@ -6,14 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Twitter summary card -->
-  <meta property="og:title" content="みちのぶのねぐら" />
+  <meta property="og:title" content="{% if title %}{{ title }} - {% endif %}みちのぶのねぐら" />
   <meta property="og:site_name" content="みちのぶのねぐら" />
-  <meta property="og:description" content="工作室 厚生部 政治局" />
+  <meta property="og:description" content="{{ description }}" />
   <meta property="og:image" content="https://pages.michinobu.jp/img/dragon2013.jpg" />
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@mixnb" />
-  <meta name="twitter:title" content="みちのぶのねぐら - 工作室 厚生部 政治局" />
-  <meta name="twitter:image" content="https://pages.michinobu.jp/img/logo.png" />
+  <meta name="twitter:title" content="{% if title %}{{ title }} - {% endif %}みちのぶのねぐら" />
+  <meta name="twitter:description" content="{{ description }}" />
+  <meta name="twitter:creator" content="@mixnb" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="https://pages.michinobu.jp/img/dragon2013.png" />
 
   <link href="{{ root }}main.css" rel="stylesheet">
 
